House cleaning (#7649)